Fix Bootstrap columns on Safari

--- a/desparchado/static/sass/main.sass
+++ b/desparchado/static/sass/main.sass
@@ -6,6 +6,10 @@
 @import "blog"
 @import "games"
 
+/* Fix Bootstrap columns on Safari */
+.row:before, row:after
+  display: inline-block
+
 .form-control
   border-radius: 0
 
